# StructureFinder

./: .gitattributes  .gitignore  LICENSE  README.md  StructureFinder.spec  StructureFinder_linux.spec  StructureFinder_mac.spec  StructureFinder_win32.spec  constants.py  db.sqlite3  elements.py  install_all_requirements  install_all_requirements.bat  install_min_requirements  mac_copyfiles.sh  manage.py  mol_file_writer.py  pyproject.toml  pytest.ini  requirements-cmd.txt  requirements-devel.txt  requirements.txt  setup.py  stdb.bat  stdb.py  stdb.sh  stdb.spec  stdb_cmd.py  stdb_main.py  stdb_main.ui  stf  strf  strf.bat  strf.py  strf.spec  strf_cmd  strf_cmd.bat  strf_cmd.py  strf_dbpasswd.py  strf_dbpasswd.ui  (+4 more)
.githooks/: pre-push
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app_windows.yml  python-dist.yml  python_tests.yml
CifFile/: StarFile.py
CifFile/drel/: drel_runtime.py
StructureDB/: settings.py  urls.py  wsgi.py
apex/: apeximporter.py
ccdc/: query.py
cgi/: http-server.py  strflog.py  strflog_Template.htm
cgi/cgi-bin/: strflog.py
cgi_ui/: index.html  strf_web_Template.htm  strflog_Template.htm
cgi_ui/bootstrap3/: custom.css
cgi_ui/cgi-bin/: strf_web.py  strflog.py
cgi_ui/static/: strf_web.css  strf_web.js  strf_web_csd.js
cgi_ui/views/: cellcheckcsd.html  cellcheckcsd.tpl  simpl_search.tpl  spgr.html  spgr.tpl  strf_base.tpl  strf_web.tpl  strf_web_template.tpl
cif/: callbacks.py  cif.py  state_diagram.graphml
displaymol/: JSmol.full.lite.js  JSmol_dk.nojq.lite.js  jsmol-template.htm  jsmol.htm  mol2_file_writer.py  mol_file_writer.py  molecule2D.py  sdm.py  simple3d.py  write_html.py
docs/: changes.rst  changes.txt  commandline.rst  conf.py  csd_search.rst  database.rst  example.rst  export.rst  index.rst  indexing.rst  installation.rst  introduction.rst  main.rst  misc.rst  plotting.rst  searching.rst  web_interface.rst
gui/: strf_dbpasswd.py  strf_main.py  strf_main.ui  table_model.py  table_view.py
lattice/: lattice.py
libcif/: libcif.py
misc/: changes.txt  dialogs.py  download.py  exporter.py  settings.py  update_check.py  version.py
old_django/StructureDB/: urls.py  wsgi.py
old_django/stdb/: apps.py  forms.py  models.py  views.py
opengl/: JSmol.full.lite.js  JSmol.lite.js  JSmol.lite.nojq.js  JSmol.min.js  JSmol.min.nojq.js  jmolview.html  jsgl.py  jsmol-template.htm  moleculegl.py
p4pfile/: p4p_reader.py
pg8000/: __init__.py
pyCifRW/: CifFile.py
pyCifRW/drel/: py_from_ast.py
pymatgen/core/: lattice.py  mat_lattice.py
pymatgen/util/: num_utils.py
qt/: editor.py  editor.ui  editor_ui.py  main.py  runedit.sh  test.ui  test_ui.py
qt/searcher/: cellpicker.py  database_handler.py  gui_search.py  misc.py  strs.py  test.sqlite
scripts/: StructureFinder.spec  _create_dist.bat  _make_win_release.py  compile_ui_files.py  copy_windows_web.cmd  create_zipfile.py  mac_copyfiles.sh  make_linux_dist.sh  make_mac_dist.sh  make_releases.py  make_win_release.bat  make_win_release.py  pyinstaller-executable.cmd  pyqt5toPyside6.py  qt5to6.py  run_scripts.py  strf-install_win32.iss  strf-install_win32b.iss  strf-install_win64.iss  strf-install_winxp.iss  structuredb.sh  version_numbers.py
scripts/linux/: stdb_cmd
scripts/starter/: resource.h  structurefinder.cpp  structurefinder.rc  structurefinder.sln  structurefinder.vcxproj  structurefinder.vcxproj.filters
scripts/win/: stdb.bat  stdb_cmd.bat  stdb_winXP.bat  strf.bat  strf_winXP.bat  strf_win_32.bat  strf_xp.bat
searcher/: atoms.py  cellpicker.py  constants.py  database_handler.py  elements.py  filecrawler.py  fileparser.py  misc.py  old_db_stuff.py  parser.py  searchhandler.py  spinner.py  textx-parser.py  unitcell.py  worker.py
shelx/: __init__.py  shelx.py
shelxfile/: __init__.py  atoms.py  cards.py  dsrmath.py  elements.py  misc.py  sdm.py  shelx.py  version.py
shelxfile/refine/: shx_refine.py
src/structurefinder/: __init__.py  strf.py  strf_cmd.py
stdb/: admin.py  cif.py  forms.py  models.py  read_cif_old.py  urls.py  views.py
stdb/migrations/: 0001_initial.py  0002_auto_20160513_0814.py  0003_auto_20160514_2046.py  0004_auto_20160514_2057.py  0005_remove_refineresult_unit_cell.py  0006_refineresult_unit_cell.py  0007_auto_20160514_2126.py  0008_auto_20160514_2129.py  0009_auto_20160514_2140.py  0010_auto_20160514_2141.py  0011_auto_20160514_2148.py  0012_auto_20160514_2151.py  0013_auto_20160514_2215.py  0014_auto_20160514_2218.py  0015_auto_20160514_2220.py  (+1 more)
structurefinder/: strf.py  strf_cmd.py
test-data/: 1023461.cif  2004924.cif  668839.cif  atomstwoline.cif  breit_tb13_85.cif  hubert.cif  p-1_a.cif  p21c.cif  p21c.res  test.sql  test1.p4p  test1.sqlite  test_strf.py
tests/: __init__.py  test_authors.py  test_cif_parser.py  test_database.py  test_database_handler.py  test_doctest.py  test_dsrmath.py  test_elements.py  test_misc.py  test_res_symmcards.py  test_search.py  test_shelx.py  test_strf.py  test_strf_tools.py
(+381 files in other folders)
