[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "structurefinder"
dynamic = ["version"]
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" },
]
description = "Search X-ray structures on your hard drive"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "docutils>=0.21.2",
    "gemmi~=0.6",
    "macholib>=1.16.3",
    "numpy~=2.1",
    "pefile>=2024.8.26",
    "pyqt5-sip~=12.13",
    "pyqt5~=5.15",
    "pyqt5-stubs~=5.15",
    "pywin32-ctypes~=0.2",
    "six>=1.17.0",
    "requests>=2.32.3",
    "gunicorn>=23.0.0",
    "xlsxwriter>=3.2.0",
    "qtawesome>=1.3.1",
    "hatchling>=1.26.3",
    "hatch-requirements-txt>=0.4.1",
]

[project.urls]
"Homepage" = "https://dkratzert.de/structurefinder.html"
"Bug Tracker" = "https://github.com/dkratzert/StructureFinder/issues"

[tool.hatch.version]
path = "src/structurefinder/misc/version.py"
pattern = "VERSION\\s*=\\s*(?P<version>\\d+\\.{0,1}\\d{0,1})"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/pictures",
    "/scripts",
    "/setup",
    "/tests",
    "/manuals",
    "/requirements-devel.txt",
    "/requirements-cmd.txt",
    "/make_release.sh",
    "/venv*",
]

[project.scripts]
strf = "structurefinder.strf:main"
structurefinder = "structurefinder.strf:main"
strf_cmd = "structurefinder.strf_cmd:main"
strf_web = "structurefinder.cgi_ui.strf_web:run"
